--- a/style.css
+++ b/style.css
@@ -44,7 +44,10 @@
 
 
 .button {
-    width:auto;
+    width:max-content;
+    margin: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
     text-align:center;
     font-size:3rem;
     margin-bottom:2rem;
@@ -59,9 +62,11 @@
     width:90%;
     text-align:left;
     font-size:3rem;
-    margin-left: 1rem;
+    padding-top:0.2rem;
+    padding-bottom:0.2rem;
+    margin-left:auto;
+    margin-right:auto;
     margin-bottom:1.5rem;
-    padding-left:1rem;
     transition-duration: .4s;
 }
 
@@ -71,14 +76,15 @@
     top:10px;
     left:10px;
     right:10px;
+    margin-bottom: 1.5rem;
 }
 
 .description {
     position:absolute;
     transition-duration: .4s;
     font-size: 1.5rem;
-    width: 66%;
-    left: 34%;
+    width: auto;
+    left: 37%;
     margin-top: 3em;
 }
 
