--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@
 }
 
 .grid-games {
-    grid-template-rows:1fr 3fr;
     grid-template-columns:100%;
 }
 
@@ -86,7 +85,6 @@
 
 .description {
     position:absolute;
-    transition-duration: .4s;
     font-size: 1.5rem;
     width: auto;
     left: 37%;
@@ -116,6 +114,7 @@
     color:white;
     text-align:center;
     margin-top: 6rem;
+    margin-bottom: 6rem;
 }
 
 .game-container{
