--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
 }
 
 .grid-home{
-    grid-template-rows: 2fr 1fr 1fr;
     grid-template-columns: 100%;
 }
 
@@ -93,22 +92,23 @@
 }
 
 .link-icon-wrapper{
-    width:100%;
-    height:100%;
-    margin-bottom:2rem;
+    position:fixed;
+    bottom:1rem;
+    right:1rem;
     display:flex;
     justify-content: flex-end;
     align-items:flex-end;
 }
 
 .link-icon {
-    width:3rem;
-    height:3rem;
+    width:auto;
+    height:auto;
     margin-right:1rem;
     font-size:1rem;
     border-radius:10px;
     background-color:black;
     box-shadow:0px 0px 20px #686868;
+    padding: 0.5rem;
 }
 
 .title {
